# bazelnixenv

./: .bazelignore  .bazeliskrc  .bazelrc  .devcontainer.json  .dockerignore  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  cargo-bazel-lock.json  devenv.nix  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix
bazel/: get_workspace_status_local.sh  rules_jvm_external-netrc.patch  rules_oci-gitlab-auth.patch
bazel/bazelrc/: buildbuddy-remote-secret-template.bazelrc  buildbuddy-remote.bazelrc  buildbuddy-results.bazelrc  ci-k8s.bazelrc  ci.bazelrc  java.bazelrc
bazel/next/: next.bzl
bazel/rust/: rust.bzl
rust/hello/: BUILD.bazel  Cargo.toml
